kubernetes_2_ingress/create-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-nodejs-service-1
spec:
  type: NodePort
  selector:
    app: simple-nodejs-pod-1
  ports:
  - port: 1000
    targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: simple-nodejs-service-2
spec:
  type: NodePort
  selector:
    app: simple-nodejs-pod-2
  ports:
  - port: 2000
    targetPort: 3000
