kubernetes_2_ingress/create-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: fajrulaulia.com
      http:
        paths:
        - path: /v1(/|$)(.*)
          pathType: Prefix
          backend:
             service:
              name: simple-nodejs-service-1
              port:
                number: 1000

        - path: /v2(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: simple-nodejs-service-2
              port:
                number: 2000
